# smart_ee_inventory

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev-lock.txt  requirements-lock.txt
backend/: app.py
backend/api/: __init__.py
backend/core/: __init__.py  events.py  lifespan.py
backend/db/: __init__.py  migrate.py  session.py
backend/models/: __init__.py  models.py
backend/schemas/: __init__.py  asset.py  bin.py  bom.py  category.py  inventory_edit.py  inventory_manage.py  operation.py  register.py  rfid.py  slot.py
backend/services/: __init__.py  bom_service.py  epc_binding.py  inventory_edit_service.py  inventory_manage_service.py  inventory_service.py  operation_service.py  presence_watchdog.py
backend/ws/: __init__.py  bin_status.py
config/: network.py  settings.py
docs/: DEMO_PPT.md  DEPENDENCIES.md  ESP32_WIFI_RFID.md  MEMO.md  PROJECT_REPORT.md  PROJECT_SUMMARY.md  RFID_MULTIPLEXER_WATCHDOG.md  TESTING.md
frontend/: __init__.py  app.py
frontend/components/: __init__.py  asset_confirm.py  navbar.py  presence_confirm.py  shelf_grid.py
frontend/constants/: bin_status.py
frontend/pages/: bins.py  dashboard.py  inventory.py  inventory_bom.py  inventory_operations.py  inventory_register.py  slots.py
gateway/: __init__.py  board_simulator.py  rfid_reader.py  serial_port.py  service.py
scripts/: check_rfid_health.py  demo_bom.csv  init_db.py  seed_data.py  simulate_rfid_board.py  smoke_test.py  test_rfid_serial.py  verify_seed.py
shared/: __init__.py  constants.py
tests/: conftest.py
(+38 files in other folders)
